Gtk3: Refactor GtkButtonImageSource::GetImageForScale

This CL refactors GetImageForScale() on Gtk3 so no widget gets created.  Only
a GtkStyleContext is needed.

In addition, it adds GtkStateFlagFocused to the style context if |focus_| is true.
This fixes focused button rendering on Ambiance, which doesn't use a focus
rectangle, but instead changes the button's border directly.

BUG=695357
R=erg@chromium.org

Review-Url: https://codereview.chromium.org/2715153002
Cr-Commit-Position: refs/heads/master@{#453292}

Former-commit-id: e9b9fb0998172808d880ca208685d8007b8f5a6e